--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,6 @@
 /* 
 ==============================================
-CONTENT:	Project Name Here
+CONTENT:	Twitter Search
 AUTHOR:		Eric Canosa
 ==============================================
 
@@ -25,7 +25,7 @@ TABLE OF CONTENTS:
 }
 
 body{
-	font-family: 'Lucida Sans', sans-serif, serif;
+	font-family: 'Segoe UI', sans-serif;
 }
 
 a{
@@ -41,15 +41,9 @@ a{
 
 .site-heading{
 	@include mixins.heading-row;
-	padding: 1rem 0rem 0.35rem;
+	padding: 1rem 0rem;
 	font-weight: bold;
 	font-size: 2rem;
-
-	&__subheading{
-		@include mixins.heading-row;
-		font-size: 1.15rem;
-		padding-bottom: 1rem;
-	}
 }
 
 .search-controls{
@@ -58,7 +52,6 @@ a{
 	display: grid;
 	grid-template-columns: 0.2fr 1fr 0.15fr 0.3fr 0.2fr;
 	grid-auto-rows: auto;
-	position: relative;
 
 	&__input{
 		grid-row: 2/3;
@@ -66,26 +59,11 @@ a{
 		height: 2rem;
 		border: none;
 		outline: none;
-		width: 50%;
+		width: 100%;
 		border-bottom: gray 1px solid;
 		background: none;
-		font-size: 1.5rem;
-		background: white;
-		padding: 0 0.5rem;
-
-		&_term{
-			box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75);
-			-webkit-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75);
-			-moz-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75);
-			// z-index:1;
-		}
-
-		&_location{
-			justify-self: right;
-			box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75);
-			-webkit-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75);
-			-moz-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.75);
-		}
+		font-size: 2rem;
+		font-weight: bold;
 	}
 
 	&__button{
@@ -98,7 +76,7 @@ a{
 		opacity: 0.3;
 		cursor: pointer;
 		align-self: end;
-		margin-left: 0.75rem;
+		margin-left: 0.25rem;
 
 		&:hover{
 			opacity: 1;
@@ -115,7 +93,7 @@ a{
 	// min-height: 3.35rem;
 }
 
-.search-menu{
+.sort-menu{
 	grid-row: 2/3;
 	grid-column: 4/5;
 	position: relative;
@@ -124,11 +102,11 @@ a{
 	font-size: 0.85rem;
 	cursor: pointer;
 	margin-left: auto;
-	padding-right: 6.75%;
+	padding-right: 4.95%;
 	// width: 8.1rem;
 
 	&__arrow{
-		padding-left: 0.3rem;
+		margin-left: 0.3rem;
 		position: absolute;
 	}
 
@@ -138,7 +116,7 @@ a{
 		}
 	}
 
-	&__sort-list{
+	&__list{
 		position: absolute;
 		background: white;
 		border: 1px solid black;
@@ -159,7 +137,7 @@ a{
 	}
 }
 
-.radius-menu{
+.count-menu{
 	grid-row: 3/4;
 	grid-column: 2/3;
 	position: relative;
@@ -167,10 +145,10 @@ a{
 	font-size: 0.75rem;
 	font-weight: bold;
 	display: flex;
-	width: 7rem;
+	width: 7.05rem;
 	padding: 1.3rem 0rem;
 
-	&__within{
+	&__show{
 		padding-top: 0.05rem;
 	}
 
@@ -195,8 +173,8 @@ a{
 		border: 1px solid black;
 		padding: 0.25rem 0rem;
 		top: 2.25rem;
-		left: 2.2rem;
-		width: 4.6rem;
+		left: 2rem;
+		width: 4.95rem;
 	}
 
 	&__item{
@@ -212,75 +190,6 @@ a{
 	}
 }
 
-.price-range{
-	grid-row: 3/4;
-	grid-column: 2/3;
-	padding: 1.05rem 0rem 1.5rem;
-	position: relative;
-	color: gray;
-	cursor: pointer;
-	width: 9rem;
-	font-size: 0.75rem;
-	font-weight: bold;
-	margin: 0.25rem 0 0 15.25rem;
-
-	&__input{
-		position: absolute;
-		display: flex;
-		align-items: center;
-		top: 0.6rem;
-		left: 6.5rem;
-		padding-top: 0.2rem;
-	}
-
-	&__label{
-		margin-right:0.6rem;
-	}
-
-	&__checkbox{
-		max-width: 8rem;
-	}
-
-	&__symbol{
-		position: absolute;
-		color: gray;
-		font-size: 0.65rem;
-		bottom: 1.85rem;
-		left: 4.8rem;
-	}
-
-	&__toggle{
-		&:hover{
-			color: black;
-		}
-	}
-
-	&:hover &__separator{
-		color: gray;
-	}
-}
-
-.open-now{
-	grid-row: 3/4;
-	grid-column: 2/3;
-	padding: 1.1rem 0rem 1.5rem 0;
-	margin-left: 8.5rem;
-	color: gray;
-	cursor: pointer;
-	font-size: 0.75rem;
-	font-weight: bold;
-	display: flex;
-
-	&__label{
-		align-self: center;
-	}
-
-	&__checkbox{
-		align-self: end;
-		margin-left: 0.4rem;
-	}
-}
-
 .results{
 	display: grid;
 	grid-column: 1/-1;
@@ -290,47 +199,55 @@ a{
 	&__row{
 		grid-column: 2/5;
 		display: grid;
-		grid-template-columns: 0.25fr 0.1fr 1fr;
-		grid-template-rows: 1.5rem 1.5rem 2rem 1.5rem 1.5rem 1.5rem;
+		grid-template-columns: 0.15fr 1fr;
+		grid-template-rows: 1.5rem 1.35rem auto 1.5rem;
 		grid-auto-rows: auto;
 		padding: 1.75rem 0rem;
 		border-bottom: 1px solid lightgray;
 	}
 
-	&__photo{
+	&__avatar{
 		grid-column: 1/2;
 		background: rgba(211,211,211,0.3);
-		grid-row: 1/9;
-		height: 12.5rem;
-		width: 12.5rem;
+		grid-row: 1/4;
+		height: 3rem;
+		width: 3rem;
+		border-radius: 999rem;
+		place-self: start center;
 	}
 
-	&__name{
+	&__user-name{
 		font-weight: bold;
-		grid-column: 3/4;
+		grid-column: 2/3;
+		grid-row: 1/2;
 		font-size: 1.1rem;
 		padding-bottom: 0.25rem;
 	}
 
-	&__rating-row{
-		grid-column: 3/4;
-		color: gray;
-		font-size: 0.9rem;
-		font-weight: bold;
-		padding-bottom: 0.25rem;
-	}
-
-	&__info-row{
-		grid-column: 3/4;
+	&__at-row{
+		grid-column: 2/3;
+		grid-row: 2/3;
 		color: gray;
 		font-size: 0.9rem;
 		padding-bottom: 0.25rem;
+
 	}
 
-	&__address-row{
-		grid-column: 3/4;
-		font-size: 0.95rem;
+	&__tweet{
+		grid-column: 2/3;
+		grid-row: 3/4;
+		color: black;
+		padding-bottom: 0.6rem;
+		line-height: 1.3;
+	}
+
+	&__timestamp{
+		grid-column: 2/3;
+		grid-row: 4/5;
+		font-size: 0.9rem;
 		padding-bottom: 0.1rem;
+		color: gray;
+		font-size: 0.9rem;
 	}
 
 
